fix overflow on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -67,6 +67,7 @@ html {
 
 body {
   background-color: var(--bg-color);
+  overflow-x: hidden;
 }
 
 h1,
